--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
   <div class="txt" id="text">Happy New Years!! 🎉🎊<br> <span>Babe ✨🎉</span></div>
   <p class="lettre">
       Hey toi 💖
-  On arrive à la fin d’une année qui, franchement, n’aurait jamais eu la même saveur sans toi🥺. Ça fait maintenant 1 an et 3 mois qu’on avance ensemble… 🥺et j’ai toujours ce petit truc dans le cœur quand je pense à nous🥺😍. Tu sais, ce mélange bizarre entre paix, bonheur, et un “wowwww😍🤩… comment j’ai fait pour avoir quelqu’un comme elle ?🥺”.
-  Cette année, tu m’as appris à aimer, à sourire plus vrai🥺, et à croire en un futur qui fait moins peur et plus envie🥺.
-  T’as été là dans les moments les plus cools jusqu'au moments les plus compliqués, les moments où je comprenais rien et même là où moi-même je savais pas où j’allais. Et ça… ça vaut plus que tout.
-  Pour l’année qui arrive, j’ai juste un souhait 🥺:Continuer à te choisir Pisou an🥺, tous les jours, à construire quelque chose de propre, solide, un peu fou parfois mais toujours nous.
-  Merci pour ta patience, ta douceur, ton énergie, ta folie mignonne, tes câlins qui reset ma tête, et ta présence qui rend ma vie plus belle que je l’avoue🥺.
+  On arrive à la fin d’une année et au début de l'année; qui, franchement, n’aurait jamais eu la même saveur sans toi aki an🥺. Ça fait maintenant 1 an et 3 mois qu’on avance ensemble… (et j'avoue que je suis tres content de faire cette traget avec toi ❤😍)🥺et j’ai toujours ce petit truc dans le cœur quand je pense à nous🥺😍❤(L'amouuuuuuurouuuuuu). Tu sais, ce mélange bizarre entre paix, bonheur, et un “wowwww😍🤩… comment j’ai fait pour avoir quelqu’un comme elle ?🥺”.
+  Cette année, tu m’as appris à aimer, à sourire🥺, et à croire en un futur qui fait moins peur et plus envie🥺😍😭😭😭.
+  T’as été là dans les moments les plus cools jusqu'au moments les plus compliqués, les moments où je comprenais rien et même là où moi-même je savais pas où j’allais. Et ça… ça vaut plus que tout aki an.
+  Pour l’année qui arrive, j’ai juste un souhait 🥺:Continuer à te choisir Pisou an🥺, isan'andro isan'andro, à construire quelque chose de nouveau, solide, un peu fou parfois mais toujours nous😂🥰❤.
+  Merci pour ta patience🥺, ta douceur🥺, ton énergie🥺, ta folie mignonne🥺😏, tes câlins miverimberina dans ma tête😭😭❤, et ta présence qui rend ma vie plus belle que je l’avoue🥺❤.
   Alors… Happy New Year, Babe ✨❤️
-  Que 2026 nous garde ensemble🥺, encore plus proches🥺, encore plus réels que jamais piso ann🥺, encore plus complices🥺.
-  Et prépare-toi : je compte bien t’aimer encore mieux que cette année😉❤🥺😍.
+  Que 2026 nous garde ensemble🥺❤, encore plus proches🥺, encore plus réels que jamais piso ann🥺, encore plus complices🥺.
+  Et prépare-toi : je compte bien t’aimer encore mieux et fona fona que cette année ann😉❤🥺😍.
   </p>
 </div>
 
