modification du texte

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ ctx.fillRect(0,0,W,H);
     document.body.innerHTML = `
       <div style="display:flex;align-items:center;justify-content:center;height:100vh;background:#060610;color:white;font-family:sans-serif;text-align:center;">
         <h1>Tsy androany aki ann.<br>MBA miandrasa wa ndry tantana malala ann🥰😏!</h1>
-        <h3> Reste plus que: ${jours} jours, ${resteHeures}h ${resteMinutes}min ${resteSecondes}s😏</h3>
+        <h3> Reste plus que: 0 jours, ${resteHeures}h ${resteMinutes}min ${resteSecondes}s😏</h3>
       </div>
     `;
   }else{
